# scoring

./: Cargo.toml  Makefile  README.md
.scripts/: generate_event_log.sh  run_capture_out.sh
sample_data/: example.csv
src/: cli.rs  event.rs  lib.rs  main.rs  score.rs  types.rs  util.rs
src/analysis/: account.rs  error.rs  mod.rs  operation.rs  summary.rs
src/analysis/account/: mod.rs  operation.rs  summary.rs
src/analysis/tests/: mod.rs  test_process_deposit.rs  test_process_dispute_chargeback.rs  test_process_dispute_init.rs  test_process_dispute_resolve.rs  test_process_withdrawal.rs  utils.rs
src/event/: mod.rs  raw.rs
src/event/wrappers/: amount.rs  client.rs  mod.rs  tx.rs
test/: test.bats
test/cases/amount_rounding/: input.csv  output.csv
test/cases/basic_successful_operations_multiple_accounts/: input.csv  output.csv
test/cases/basic_successful_operations_single_account/: input.csv  output.csv
test/cases/dispute_already_in_progess/: input.csv
test/cases/dispute_chargeback_success/: input.csv  output.csv
test/cases/dispute_init_success/: input.csv  output.csv
test/cases/dispute_resolve_resolve/: input.csv  output.csv
test/cases/dispute_resolve_resolve_chargeback/: input.csv  output.csv
test/cases/dispute_resolve_success/: input.csv  output.csv
test/cases/dispute_withdrawal/: input.csv  output.csv
test/cases/duplicate_operations/: input.csv
test/cases/example/: output.csv
test/cases/input_csv_amount_column_in_the_middle/: input.csv  output.csv
test/cases/insufficient_funds_withdrawal/: input.csv  output.csv
test/cases/locked_account/: input.csv  output.csv
test/cases/negative_amount_operations/: input.csv  output.csv
test/cases/unknown_account_dispute_chargeback/: input.csv
test/cases/unknown_account_dispute_resolve/: input.csv  output.csv
test/cases/unknown_account_withdrawal/: input.csv
test/cases/unknown_dispute_chargeback/: input.csv  output.csv
test/cases/unknown_dispute_resolve/: input.csv
