[package]
name = "scoring"
authors = ["Evgeniy Terekhin <e_terekhin@pm.me>"]
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1"
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_matches = "1"
pretty_assertions = "1"
